--- a/css/index.css
+++ b/css/index.css
@@ -54,3 +54,18 @@ body {
     color: #009ad8;
 
 }
+footer{
+    background-color: #262936;
+
+}
+.customIcon {
+    width: 40px;
+    height: 40px;
+    color: #009ad8;
+    background-color: #1E202B;
+    cursor: pointer;
+}
+.customIcon:hover{
+    color: white;
+    background-color: #009ad8;
+}
